Lecture_2-3: Development and production environment segregation.

--- a/OnionAPI/Presentation/OnionAPI.API/appsettings.Development.json
+++ b/OnionAPI/Presentation/OnionAPI.API/appsettings.Development.json
@@ -1,8 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=OnionAPIDb;Trusted_Connection=True;"
   }
 }
