Lecture_5: Entity configurations with IEntityTypeConfiguration and seeding data with Bogus.

--- a/OnionAPI/Core/OnionAPI.Application/OnionAPI.Application.csproj
+++ b/OnionAPI/Core/OnionAPI.Application/OnionAPI.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OnionAPI.Domain\OnionAPI.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
