--- a/OnionAPI/Infrastructure/OnionAPI.Persistence/OnionAPI.Persistence.csproj
+++ b/OnionAPI/Infrastructure/OnionAPI.Persistence/OnionAPI.Persistence.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Bogus" Version="35.4.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.16" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\OnionAPI.Application\OnionAPI.Application.csproj" />
+  </ItemGroup>
+
 </Project>
