--- a/OnionAPI/Presentation/OnionAPI.API/appsettings.Development.json
+++ b/OnionAPI/Presentation/OnionAPI.API/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=OnionAPIDb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=OnionAPIDb;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
