--- a/OnionAPI/Core/OnionAPI.Application/OnionAPI.Application.csproj
+++ b/OnionAPI/Core/OnionAPI.Application/OnionAPI.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.16" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\OnionAPI.Domain\OnionAPI.Domain.csproj" />
   </ItemGroup>
 
