--- a/OnionAPI/Core/OnionAPI.Application/OnionAPI.Application.csproj
+++ b/OnionAPI/Core/OnionAPI.Application/OnionAPI.Application.csproj
@@ -7,11 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.16" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\OnionAPI.Domain\OnionAPI.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Features\Products\Commands\" />
   </ItemGroup>
 
 </Project>
