--- a/OnionAPI/Core/OnionAPI.Application/OnionAPI.Application.csproj
+++ b/OnionAPI/Core/OnionAPI.Application/OnionAPI.Application.csproj
@@ -8,7 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.1.34" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.16" />
+    <PackageReference Include="SendGrid" Version="9.29.2" />
   </ItemGroup>
 
   <ItemGroup>
