Lecture_17: JWT Token Service implementation, CreateToken function.

--- a/OnionAPI/Presentation/OnionAPI.API/appsettings.Development.json
+++ b/OnionAPI/Presentation/OnionAPI.API/appsettings.Development.json
@@ -1,5 +1,12 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\SQLEXPRESS;Database=OnionAPIDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "JWT": {
+    "Audience": "http://localhost:5000",
+    "Issuer": "http://localhost:5000",
+    "Secret": "okteef72rb&g_uq!j9=yqypyt8rb4e0l%%1^&a6@q&9e*0&1-m",
+    "TokenValidityInMinutes": 15,
+    "RefreshTokenValidityInDays" :  60
   }
 }
