--- a/OnionAPI/Infrastructure/OnionAPI.Infrastructure/OnionAPI.Infrastructure.csproj
+++ b/OnionAPI/Infrastructure/OnionAPI.Infrastructure/OnionAPI.Infrastructure.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Core\OnionAPI.Application\OnionAPI.Application.csproj" />
   </ItemGroup>
 
