--- a/OnionAPI/Presentation/OnionAPI.API/OnionAPI.API.csproj
+++ b/OnionAPI/Presentation/OnionAPI.API/OnionAPI.API.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Core\OnionAPI.Application\OnionAPI.Application.csproj" />
     <ProjectReference Include="..\..\Core\OnionAPI.Mapper\OnionAPI.Mapper.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\OnionAPI.Infrastructure\OnionAPI.Infrastructure.csproj" />
     <ProjectReference Include="..\..\Infrastructure\OnionAPI.Persistence\OnionAPI.Persistence.csproj" />
   </ItemGroup>
 
