--- a/OnionAPI/Infrastructure/OnionAPI.Infrastructure/OnionAPI.Infrastructure.csproj
+++ b/OnionAPI/Infrastructure/OnionAPI.Infrastructure/OnionAPI.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.16" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
   </ItemGroup>
 
