--- a/OnionAPI/Core/OnionAPI.Application/OnionAPI.Application.csproj
+++ b/OnionAPI/Core/OnionAPI.Application/OnionAPI.Application.csproj
@@ -20,4 +20,9 @@
     <ProjectReference Include="..\OnionAPI.Domain\OnionAPI.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Auth\Queries\" />
+    <Folder Include="Features\Auth\Exceptions\" />
+  </ItemGroup>
+
 </Project>
