Lecture_23: RedisCacheBehaviour, RedisCacheService and settings developed.

--- a/OnionAPI/Presentation/OnionAPI.API/appsettings.Development.json
+++ b/OnionAPI/Presentation/OnionAPI.API/appsettings.Development.json
@@ -7,6 +7,10 @@
     "Issuer": "http://localhost:5000",
     "Secret": "okteef72rb&g_uq!j9=yqypyt8rb4e0l%%1^&a6@q&9e*0&1-m",
     "TokenValidityInMinutes": 15,
-    "RefreshTokenValidityInDays" :  60
+    "RefreshTokenValidityInDays": 60
+  },
+  "RedisCacheSettings": {
+    "ConnectionString": "localhost, abortConnect=false",
+    "InstanceName" :  "Redis_OnionAPI"
   }
 }
