Lecture_24: Redis caching for GetAllProducts and IoC addings.

--- a/OnionAPI/Presentation/OnionAPI.API/appsettings.Development.json
+++ b/OnionAPI/Presentation/OnionAPI.API/appsettings.Development.json
@@ -10,7 +10,7 @@
     "RefreshTokenValidityInDays": 60
   },
   "RedisCacheSettings": {
-    "ConnectionString": "localhost, abortConnect=false",
+    "ConnectionString": "localhost:1453, abortConnect=false",
     "InstanceName" :  "Redis_OnionAPI"
   }
 }
