--- a/OnionAPI/Infrastructure/OnionAPI.Infrastructure/OnionAPI.Infrastructure.csproj
+++ b/OnionAPI/Infrastructure/OnionAPI.Infrastructure/OnionAPI.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.16" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.16" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.7.17" />
   </ItemGroup>
